flicker fix, plus some more dropdown removal

--- a/src/app/public/modules/datepicker/datepicker.component.scss
+++ b/src/app/public/modules/datepicker/datepicker.component.scss
@@ -11,3 +11,7 @@
 .sky-datepicker-calendar-container {
   position: fixed;
 }
+
+.sky-datepicker-hidden {
+  opacity: 0;
+}
