--- a/src/app/public/modules/timepicker/timepicker.component.scss
+++ b/src/app/public/modules/timepicker/timepicker.component.scss
@@ -5,15 +5,6 @@
   border-radius: 0;
 }
 
-.sky-input-group-timepicker-btn ::ng-deep .sky-dropdown-menu {
-  box-shadow: none;
-  background-color: transparent;
-  text-align: center;
-}
-.sky-input-group ::ng-deep .sky-dropdown-item{
-  box-shadow: 0 0 3px 0;
-}
-
 .sky-timepicker-container {
   position: fixed;
   font-size: $sky-font-size-base;
@@ -101,4 +92,8 @@
   border-color: $sky-color-gray-10;
   padding: $sky-padding;
   cursor: pointer;
+}
+
+.sky-timepicker-hidden {
+  opacity: 0;
 }
